--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section id="home" class="text-gray-400 bg-gray-900 body-font">
             <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
                 <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 md:mb-0 mb-10">
-                    <img class="object-cover object-center rounded" alt="hero" src="C:\Users\KIIT\Downloads\payment_gateway_integration\img1.jpg">
+                    <img class="object-cover object-center rounded" alt="hero" src="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80">
                 </div>
                 <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
                     <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white"> It's easy to be generous with other
