--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="text-gray-400 bg-gray-900 body-font">
             <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                 <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-green-500 rounded-full" viewBox="0 0 24 24">
                   <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
                 </svg>
                     <span class="ml-3 text-xl">The Spark Foundation</span>
@@ -37,11 +37,10 @@
                     <img class="object-cover object-center rounded" alt="hero" src="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80">
                 </div>
                 <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-                    <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white"> It's easy to be generous with other
-                        <br class="hidden lg:inline-block">people's money.
+                    <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white"> Give a Hand to make the 
+                        <br class="hidden lg:inline-block">Better World.
                     </h1>
-                    <p class="mb-8 leading-relaxed">“Love can be a natural endowment, a present, or a gift. If it is not just a donation, it can be a divine talent. Since love is a silver bullet, it can make the unimaginable possible through the power of its inspiration. ("Love as dizzy
-                        as a cathedral")” ― Erik Pevernagie </p>
+                    <p class="mb-8 leading-relaxed">That don't lights.Blessed land spirit creature divide our made two itself upon you'll dominion waters man second good you they're divided upon winged were replenish night.</p>
                     <div class="flex justify-center">
                         <form>
                             <script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_HURgjwsxkKMxrZ" async>
